--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>File System</title>
+    <title>File System on phonegap build</title>
     <script type="text/javascript" charset="utf-8" src="phonegap.js"></script>
     <link rel="stylesheet" href="jquery.mobile-1.2.0.min.css" />
     <script type="text/javascript" charset="utf-8" src="js/jquery-1.8.min.js"></script>
